--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "currency-conversion",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
